# kube-schedule-scaler-threaded

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
deploy/: deployment.yaml
schedule_scaling/: main.py
tests/: test_kube_schedule_scaler.py
