[project]
name = "kube-schedule-scaler-threaded"
version = "0.1.1"
description = "A simple controller for scaling Kubernetes deployments based on annotations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croniter>=2.0.7",
    "kubernetes>=32.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
